H53 add api for mutate user about data
